# pyano-framework

./: .gitignore  Cargo.toml  Readme.md
docs/: example.rs
examples/: agent.rs  chain_agents.rs  chain_agents1.rs  generate_embeddings.rs  vector_store_sqlite_vec.rs  vector_store_sqlite_vec_inmemory.rs  vector_store_sqlite_vec_with_metadata.rs
examples/model/: model_client.rs
package/model_manager/: Cargo.toml  Readme.md  todo.md
package/model_manager/src/: main.rs
src/: lib.rs
src/agent/: agent.rs  agent_builder.rs  agent_trait.rs  executor.rs  mod.rs  traits.rs
src/agent/image_to_text/: mod.rs
src/agent/text/: summarizer.rs
src/agent/text_to_text/: mod.rs
src/chain/: mod.rs  sequential_chain.rs
src/embedding/: embedder.rs  embedder_builder.rs  embedder_trait.rs  embedding_models.rs  error.rs  mod.rs
src/knowledge/: store.rs
src/llm/: error.rs  handle.rs  llm_builder.rs  local.rs  mod.rs  options.rs  stream_processing.rs  types.rs
src/model/: Readme.md  Todo.md  client.rs  config_loader.rs  error.rs  manager.rs  manager_trait.rs  mod.rs  process.rs  server.rs  system_memory.rs  types.rs
src/model/adapters/: llama.rs  mod.rs  smol_vlm.rs
src/orchestration/: state.rs  workflow.rs
src/schemas/: document.rs  mod.rs  retriever.rs
src/tools/: mod.rs  tool.rs
src/tools/command_executor/: command_executor.rs
src/tools/duckduckgo/: duckduckgo_search.rs  mod.rs
src/tools/scraper/: scraper.rs
src/types/: common.rs
src/vectorstore/: mod.rs  store_trait.rs  vectorstore.rs
src/vectorstore/sqlite_vec/: builder.rs  mod.rs  sqlite_vec.rs
(+3 files in other folders)
