[package]
name = "pyano"
version = "0.1.0"
description = "A composable, resource-efficient framework for building AI applications locally"
license = "MIT"
edition = "2021"


[lib]
name = "pyano"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
async-trait = "0.1"
chrono = { version = "0.4.39", features = ["serde"]}
reqwest = { version = "0.12.9", features = ["stream", "json"] }
axum = "0.7.9"
serde_json = "1.0.133"
futures = "0.3.31"
bytes = "1.9.0"
tokio-stream = "0.1.17"


[dev-dependencies]
tokio-test = "0.4"
